# global-lustre-jobstats-rust

./: .gitignore  Cargo.toml  README.md  release.sh
completions/: glljobstat.bash
src/: args.rs  config.rs  error.rs  job_stats.rs  main.rs  op_keys.rs  output.rs  persistence.rs  ssh.rs  stats_processor.rs
src/logging/: coordinator.rs  mod.rs  parquet.rs  path_resolver.rs  prometheus.rs  raw.rs  victoriametrics.rs
src/tui/: app.rs  events.rs  filters.rs  mod.rs  time_series.rs  ui.rs
src/tui/replay/: mod.rs  readers.rs  state.rs
src/tui/widgets/: bar_chart.rs  graph.rs  help.rs  job_table.rs  left_panel.rs  legend.rs  mod.rs  status_bar.rs
